--- a/项目总结.md
+++ b/项目总结.md
@@ -1,6 +1,6 @@
-##此项目个人总结
+# 此项目个人总结
 
-###开发步骤
+### 开发步骤
     1.首先使用模版，其中必须加上
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     2.在style中引入bootstrap.css核心样式库
@@ -10,7 +10,7 @@
     4.在body中引入bootstrap.js
     官方模版见：https://v3.bootcss.com/getting-started/#template
     
-###viewport标签的必须性（移动端开发重点）
+### viewport标签的必须性（移动端开发重点）
     运用Bootstrap这种UI框架做三端开发，虽然Bootstrap是以移动端优先，但是对移动端的技术点体现不强烈，因为框架做好了。
             比如:
                 视口理论，
@@ -29,10 +29,10 @@
     对viewport标签的详细理解： 
         https://www.jianshu.com/p/641589d0d975
 
-###Bootstrap
+### Bootstrap
     Bootstrap的重难点在栅格系统，核心是媒体查询。
 
-###个人对栅格系统的理解
+### 个人对栅格系统的理解
     纵观各个UI库，有栅格的系统的感觉都雷同，均是利用less等css预处理语言递归循环写出样式，看完源码后发现自己也有提取栅格系统的能力，哈哈哈。
 
     栅格系统主要用于响应式布局
@@ -51,18 +51,18 @@
             列排序：col-md-pull-* col-md-push-* 调整的是relative的right，left， 用于调整谁先掉下来
 
     利用栅格系统布局
-        ![常用布局](images\典型结构.png "根目录images中典型结构.png")
-    **栅格盒模型设计的精妙之处**
+        ![常用布局](./images/典型结构.png)
+    ** 栅格盒模型设计的精妙之处 **
         --其中对内外填充及布局的理解
             因为在设计之初有槽宽设定，两端padding=15px 槽宽默认即为30px 
             col有内填充，在嵌套列的时候，为了避免col直接嵌套会导致槽宽叠加，
             通过row的margin=-15px 去抵消上一层col的padding，也导致了
             container，container-fluid两端必须有padding=15px 去包住最外层row
 
-###媒体查询
+### 媒体查询
     可以自定义一些响应式样式
 
-###对于bootstrap内置的样式，组件的使用
+### 对于bootstrap内置的样式，组件的使用
     个人认为，很多内置样式太鸡肋，所以官网也提供了自定义简洁bootstrap的功能
         全局css样式部分： 
             重点用好 栅格系统 ，响应式工具也可以用一下
