--- a/项目总结.md
+++ b/项目总结.md
@@ -55,7 +55,7 @@
             列排序：col-md-pull-* col-md-push-* 调整的是relative的right，left， 用于调整谁先掉下来
 
 利用栅格系统布局
-![常用布局](./images/典型结构.png)
+![常用布局](./images/jiegou.png)
 **栅格盒模型设计的精妙之处** <br>
 - 其中对内外填充及布局的理解<br>
     因为在设计之初有槽宽设定，两端padding=15px 槽宽默认即为30px 
