图标格式更改

--- a/项目总结.md
+++ b/项目总结.md
@@ -54,8 +54,8 @@
             列偏移：col-md-offset-* 调整margin-left 用于调整块的位置
             列排序：col-md-pull-* col-md-push-* 调整的是relative的right，left， 用于调整谁先掉下来
 
-利用栅格系统布局
-![常用布局](./images/jiegou.png)
+利用栅格系统布局（常用布局）
+![常用布局](./images/jiegou.jpg)<br/>
 **栅格盒模型设计的精妙之处** <br>
 - 其中对内外填充及布局的理解<br>
     因为在设计之初有槽宽设定，两端padding=15px 槽宽默认即为30px 
